--- a/Astra.Core/Astra.Core.vcxproj
+++ b/Astra.Core/Astra.Core.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="src\graphics\particles\Particle.cpp" />
     <ClCompile Include="src\graphics\particles\ParticleController.cpp" />
     <ClCompile Include="src\graphics\particles\ParticleSystem.cpp" />
+    <ClCompile Include="src\graphics\post_processing\BloomEffect.cpp" />
     <ClCompile Include="src\graphics\post_processing\ImageEffect.cpp" />
     <ClCompile Include="src\graphics\post_processing\PostProcessor.cpp" />
     <ClCompile Include="src\graphics\renderers\Entity3dRenderer.cpp" />
@@ -261,6 +262,7 @@
     <ClInclude Include="src\graphics\particles\ParticleController.h" />
     <ClInclude Include="src\graphics\particles\ParticleSystem.h" />
     <ClInclude Include="src\graphics\particles\ConeParticleSystem.h" />
+    <ClInclude Include="src\graphics\post_processing\BloomEffect.h" />
     <ClInclude Include="src\graphics\post_processing\ContrastEffect.h" />
     <ClInclude Include="src\graphics\post_processing\HDREffect.h" />
     <ClInclude Include="src\graphics\post_processing\HorizontalBlurEffect.h" />
@@ -280,6 +282,7 @@
     <ClInclude Include="src\graphics\renderers\TerrainRenderer.h" />
     <ClInclude Include="src\graphics\renderers\WaterRenderer.h" />
     <ClInclude Include="src\graphics\scenes\Scene.h" />
+    <ClInclude Include="src\graphics\shaders\BloomShader.h" />
     <ClInclude Include="src\graphics\shaders\ContrastShader.h" />
     <ClInclude Include="src\graphics\shaders\EntityShader.h" />
     <ClInclude Include="src\graphics\shaders\FontShader.h" />
@@ -314,8 +317,10 @@
     <ClInclude Include="src\utils\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="src\resources\shaders\Bloom.shader" />
     <None Include="src\resources\shaders\Contrast.shader" />
     <None Include="src\resources\shaders\Entity.shader" />
+    <None Include="src\resources\shaders\FinalBloom.shader" />
     <None Include="src\resources\shaders\Font.shader" />
     <None Include="src\resources\shaders\Gizmo.shader" />
     <None Include="src\resources\shaders\Gui.shader" />
