Astra-50-Fixed buffering of particle vbo and switched to subbuffering.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .git/
 bin/
 *.obj
-Dependencies/Astra.Core/Debug/
+Dependencies/Astra.Core/
 Astra.Core/intermediates/
 !Astra.Core/src/resources/*.obj
